--- a/package.json
+++ b/package.json
@@ -4,8 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --no-cache"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "firebase": "^3.5.1"
+  },
+  "devDependencies": {
+    "babel-jest": "^16.0.0",
+    "babel-preset-latest": "^6.16.0",
+    "jest": "^16.0.2"
+  },
+  "babel": {
+    "presets": [
+      "latest"
+    ]
+  }
 }
